// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HighlightCard /> renders correctly with default props and matches snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 14,
        "borderWidth": 1,
        "height": 200,
        "marginHorizontal": 7.5,
        "overflow": "hidden",
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#eee",
        "opacity": 1,
        "width": 128,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        [
          {
            "backgroundColor": "transparent",
            "width": 128,
          },
          undefined,
        ],
      ]
    }
  >
    <ViewManagerAdapter_ExpoImage
      containerViewRef={"[React.ref]"}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height="50%"
      nativeViewRef={"[React.ref]"}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      source={
        [
          {
            "uri": "https://picsum.photos/170/200",
          },
        ]
      }
      style={
        {
          "height": "50%",
          "width": "100%",
        }
      }
      transition={null}
      width="100%"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={4}
      style={
        [
          {
            "color": "#000",
          },
          {
            "padding": 10,
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet
    </Text>
  </View>
</View>
`;

exports[`<HighlightCard /> renders correctly with description and image props and matches snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 14,
        "borderWidth": 1,
        "height": 200,
        "marginHorizontal": 7.5,
        "overflow": "hidden",
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#eee",
        "opacity": 1,
        "width": 128,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        [
          {
            "backgroundColor": "transparent",
            "width": 128,
          },
          undefined,
        ],
      ]
    }
  >
    <ViewManagerAdapter_ExpoImage
      containerViewRef={"[React.ref]"}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height="50%"
      nativeViewRef={"[React.ref]"}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      source={
        [
          {
            "uri": "https://example.com/test-image.png",
          },
        ]
      }
      style={
        {
          "height": "50%",
          "width": "100%",
        }
      }
      testID="highlight-card-image"
      transition={null}
      width="100%"
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={4}
      style={
        [
          {
            "color": "#000",
          },
          {
            "padding": 10,
          },
        ]
      }
    >
      Test Description
    </Text>
  </View>
</View>
`;
